<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/barber_surface"
    android:padding="32dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name" />

        <EditText
            android:id="@+id/email_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:layout_marginTop="8dp" />

        <EditText
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_marginTop="8dp" />

        <CheckBox
            android:id="@+id/check_iam_barber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/i_am_barber"
            android:layout_marginTop="8dp" />

        <TextView
            android:id="@+id/label_choose_barber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_barber"
            android:layout_marginTop="16dp"
            android:visibility="visible" />

        <Spinner
            android:id="@+id/barber_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:visibility="visible" />

        <Button
            android:id="@+id/register_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:layout_marginTop="24dp" />
    </LinearLayout>
</ScrollView>
